fixing a spelling mistake

--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
             <!-- <a id="right" href= "https://my.matterport.com/show/?m=c9ZKvfyrBNS">3D TOUR</a>  -->
         <p>
             Beautiful downtown bungalow. 4 minute walking distance to Penrose Hospital. Huge, fully
-            fenced backyard. Remodel jos will start soon!
+            fenced backyard. Remodel job will start soon!
 
 
         </p>
