took out messaging section

--- a/index.html
+++ b/index.html
@@ -546,7 +546,7 @@
     </div>
   </section> -->
 
-  <section id="contact">
+  <!-- <section id="contact">
     <div class="container">
       <h2>Contact</h2>
       
@@ -570,7 +570,7 @@
         </form>
       </div>
     </div>
-  </section>
+  </section> -->
 
   <!-- <footer>
     <div class="flex container">
