--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
         <div>
           <strong>Bedrooms and bathrooms</strong>
           <ul>
-            <li>Bedrooms: 1</li>
+            <li>Bedrooms: 2</li>
             <li>3/4 bathroom: 1</li>
           </ul>
         </div>
@@ -417,15 +417,12 @@
         <div>
           <strong>Flooring</strong>
           <ul>
-            <li>Wood, Tile</li>
+            <li>Wood and Tile</li>
           </ul>
         </div>
 
-        <div> -->
-          <!-- <strong>Extras</strong>
-          <ul>
-            <li>Patio Furniture, blinds and curtains are also included with sale</li>
-          </ul> -->
+        <div>
+         
         </div>
       </div>
 
