deleting some picutres and updating garage info

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
           </div>
           <div class="Garage space">
             <div class="padded-inner-container">
-              <strong></strong><small>1 Car Garage</small>
+              <strong></strong><small>1 Car Parking</small>
             </div>
           </div>
           <!-- <small class="year-built">Built: 2019</small> -->
@@ -249,18 +249,18 @@
         <div>
             <img src="images/49.jpg" alt="Property Image 49" />
         </div>  
-        <div>
+        <!-- <div>
             <img src="images/50.jpg" alt="Property Image 50" />
-        </div>  
+        </div>   -->
         <div>
             <img src="images/51.jpg" alt="Property Image 51" />
         </div>  
-        <div>
+        <!-- <div>
             <img src="images/52.jpg" alt="Property Image 52" />
-        </div>  
-        <div>
+        </div>   -->
+        <!-- <div>
             <img src="images/53.jpg" alt="Property Image 53" />
-        </div>  
+        </div>   -->
         <div>
             <img src="images/54.jpg" alt="Property Image 54" />
         </div>  
@@ -279,9 +279,9 @@
         <div>
             <img src="images/59.jpg" alt="Property Image 59" />
         </div>  
-        <div>
+        <!-- <div>
             <img src="images/60.jpg" alt="Property Image 60" />
-        </div>  
+        </div>   -->
         <div>
             <img src="images/61.jpg" alt="Property Image 61" />
         </div>  
@@ -294,18 +294,18 @@
         <div>
             <img src="images/64.jpg" alt="Property Image 64" />
         </div>  
-        <div>
+        <!-- <div>
             <img src="images/65.jpg" alt="Property Image 65" />
-        </div>  
+        </div>   -->
         <div>
             <img src="images/66.jpg" alt="Property Image 66" />
         </div>  
         <div>
             <img src="images/67.jpg" alt="Property Image 67" />
         </div>  
-        <div>
+        <!-- <div>
             <img src="images/68.jpg" alt="Property Image 68" />
-        </div>  
+        </div>   -->
         <div>
             <img src="images/69.jpg" alt="Property Image 69" />
         </div>  
@@ -371,7 +371,7 @@
           <span>Single Family</span>
         </div>
         <div>
-          <label><span class="fa fa-car"></span> Detached Garage:</label>
+          <label><span class="fa fa-car"></span> Parking Spot:</label>
           <span>1 Car</span>
         </div>
         <div>
